--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
   
 website:
-  title: "ProjetoGerminacao"
+  title: "Projeto Germinação"
   navbar:
     left:
       - href: index.qmd
@@ -15,6 +15,7 @@ format:
     theme: cosmo
     css: styles.css
     toc: true
+editor: visual
 
 
 
